--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.love2d.android.executable"
+<manifest package="com.vacaroxa.codenamelt.executable"
       android:installLocation="auto" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -13,13 +13,13 @@
   <application
       android:allowBackup="true"
       android:icon="@drawable/love"
-      android:label="LÖVE for Android"
+      android:label="CodenameLT"
       android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
       <service android:name="org.love2d.android.DownloadService" />
       <activity
         android:name="org.love2d.android.GameActivity"
         android:configChanges="orientation|screenSize"
-        android:label="LÖVE for Android"
+        android:label="CodenameLT"
         android:launchMode="singleTop"
         android:screenOrientation="landscape" >
         <intent-filter>
